# steampunkfantasy

./: #data.py#  #tmp#  .gitignore  DarkElf.dvi  DarkElf.json  DarkElf.pcl  DarkElf.tex  DarkElf.toml  Dwarf.json  Dwarf.tex  Dwarf.toml  Elf.json  Elf.pcl  Elf.tex  Elf.toml  Gnome.json  Gnome.toml  Hss.tex  Ork.json  Ork.pcl  Ork.tex  Ork.toml  Ork_short.tex  README.md  StandarDwarf.tex  StandarElf.tex  StandarOrk.tex  armies.dvi  armies.tex  armies.toc  armybuilder.py  assault_template.tex  assault_template_short.tex  build.py  card_dwarf_standar.tex  card_gnome_stnadar.dvi  card_mal.tex  card_mal2.tex  cheatsheet.md  cheatsheet.md~  (+36 more)
v3/: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTEXT.md  MIGRATE_TOML.md  README.md  justfile  pyproject.toml  typos.toml
v3/armies/: demo.json  showcase_goblin.json
v3/armies/2025/: geir_arne.json  morten.json
v3/armies/build_scripts/: 2025_geir_arne.py  2025_morten.py  __init__.py  showcase_abomination.py  showcase_dwarf.py  showcase_elf.py  showcase_goblin.py
v3/armies/showcase/: abomination.json  dwarf.json  elf.json  goblin.json
v3/configs/: spf.toml
v3/data/: abomination.toml  goblin.toml  ogre.toml
v3/docs/: build_army.md
v3/docs/adr/: 0001-two-tier-army-model.md  0002-equipment-discard-rule.md  0003-toml-races-json-armies.md  0004-strict-validation-tolerant-listing.md  0005-rendering-pipeline.md  0006-generated-assets-committed-and-curated.md  0007-merged-orders-and-card-view-model.md  0008-curation-generate-promote-flow.md  (+8 more)
v3/openspec/: config.yaml
v3/prompts/: example.txt  exempel.txt  image-negative.txt  image.txt  ogre_example.txt
v3/races/: abomination.toml  changelog.md  changelog.txt  darkelf.toml  dwarf.toml  elf.toml  general.toml  gnome.toml  goblin.toml  ogre.toml  ork.toml
v3/rules/: assaultretreat.toml  changelog.md  hexes.toml  special.toml  todo.md  tokens.toml  tokens_and_hex.toml
v3/templates/: card_template.tex  damage_tableheadline_template.tex  damage_tablesline_template.tex
v3/tests/: __init__.py  conftest.py  test_armies.py  test_data.py  test_display.py  test_races.py  test_teams.py
v3/workflows/: README.md  cloud-refine.json  cloud.json  image_qwen_txt.json
(+563 files in other folders)
