[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[project]
name = "spf"
version = "0.1.0"
description = "SteamPunkFantasy"
readme = "README.md"
authors = [
    { name = "Hans Sverre Smalø", email = "hanssverre@gmail.com" },
    { name = "Geir Arne Hjelle", email = "geirarne@gmail.com" },
]
requires-python = ">=3.12"
dependencies = [
    "configaroo>=0.6.1",
    "cyclopts>=4.10.1",
    "munch>=4.0.0",
    "pyconfs>=0.5.7",
    "pydantic>=2.12.5",
]

[project.scripts]
spf = "spf.__main__:main"

[dependency-groups]
dev = [
    "ipython>=9.12.0",
    "prek>=0.3.8",
    "ruff>=0.15.9",
    "typos>=1.45.0",
]
