[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[project]
name = "spf"
version = "0.1.0"
description = "SteamPunkFantasy"
readme = "README.md"
authors = [
    { name = "Hans Sverre Smalø", email = "hanssverre@gmail.com" },
    { name = "Geir Arne Hjelle", email = "geirarne@gmail.com" },
]
requires-python = ">=3.12"
dependencies = ["configaroo>=0.6.1", "cyclopts>=4.10.1", "pydantic>=2.12.5"]

[project.scripts]
spf = "spf.__main__:main"

[dependency-groups]
dev = [
    "ipython>=9.12.0",
    "prek>=0.3.8",
    "pytest>=9.0.3",
    "ruff>=0.15.9",
    "ty>=0.0.29",
    "typos>=1.45.0",
]

[tool.ruff]
target-version = "py312"
exclude = [".git", ".venv"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Trailing comma missing (handled by formatter)
    "D203",   # Force blank line before class docstring (incompatible with D211)
    "D213",   # Start docstring on second line (incompatible with D212)
]

[tool.ruff.lint.per-file-ignores]
# D101: Missing docstring in public class (OK for base models)
# D103: Missing docstring in public function (OK for tests)
# PLR2004: Magic value used in comparison (OK for tests)
# S101: Use of `assert` (OK for tests)
# SLF001: Private member accessed (OK for tests)
# UP018: Replace with string/integer/... literal (OK for typed tests)
"src/spf/schemas/*.py" = ["D101"]
"tests/test_*.py" = ["D103", "PLR2004", "S101", "SLF001", "UP018"]
